# INF6804-Computer-Vision

./: .gitignore  INF6804-Computer-Vision.code-workspace  README.md
TP1/: README.md  ajustement_wandb.py  draft.drawio  main.ipynb  main.py  pyproject.toml
TP1/configs/: config.yaml
TP1/configs/descriptor/: histogram.yaml  matrix_flattener.yaml
TP1/configs/feature_extractor/: co_occurrence_matrix.yaml  local_binary_pattern.yaml
TP1/configs/similarity/: bhattacharyya_distance_similarity.yaml  cosine_similarity.yaml  hamming_distance_similarity.yaml  intersection_similarity.yaml  ip_norms_similarity.yaml  pair_assignments_similarity.yaml
TP1/doc/: README.md  Report.docx  draft.drawio  exec_flux.drawio
TP1/scripts/: co_occurence_matrix_sweep.sh  co_occurence_maxtrix_4_levels_sweep.sh  co_occurence_maxtrix_distance_sweep.sh  local_binary_pattern_sweep.sh
TP1/src/: database.py
TP1/src/decorators/: hydra_config_decorator.py  performance_counter_decorator.py  wandb_run_decorator.py
TP1/src/descriptors/: descriptor.py  histogram.py  matrix_flattener.py
TP1/src/experiment/: experiment.py
TP1/src/feature_extractors/: __init__.py  co_occurence_matrix  co_occurence_matrix.py  co_occurrence_matrix.py  feature_extractor.py  local_binary_pattern.py
TP1/src/similarities/: __init__.py  bhattacharyya_distance_similarity.py  cosine_similarity.py  hamming_distance_similarity.py  intersection_similarity.py  ip_norms_similarity.py  pair_assignments_similarity.py  similarity.py  similarity_factory.py
TP1/src/utils/: environment.py  factory.py  label_encoder.py
TP3/: .env.example.md  README.md  add_dataset.py  bytetrack.ipynb  main.py  pyproject.toml  transform_frames_to_video.py
TP3/configs/: config.yaml
TP3/doc/: README.md
TP3/scripts/: start_backend.sh
TP3/src/experiment/: experiment.py
TP3/src/utils/: factory.py
(+43 files in other folders)
