[tool.poetry]
name = "tp1"
version = "0.1.0"
description = ""
authors = ["Nicolas Depelteau <nicolas@depelteau.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
notebook = "^7.0.6"
ipykernel = "^6.29.0"
scikit-image = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
